--- a/M133-Projektarbeit-Zoo/src/main/webapp/index.html
+++ b/M133-Projektarbeit-Zoo/src/main/webapp/index.html
@@ -5,6 +5,6 @@
     <title>Index</title>
 </head>
 <body>
-
+<p>Try path "<code>/api/hello-world/</code>" for testing the initial service</p>
 </body>
 </html>
