--- a/M133-Projektarbeit-Zoo/src/main/webapp/index.html
+++ b/M133-Projektarbeit-Zoo/src/main/webapp/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <p>Try path "<code>/api/hello-world/</code>" for testing the initial service</p>
+<br>
+<a href="pages/login.html">Login</a>
 </body>
 </html>
