--- a/M133-Projektarbeit-Zoo/src/main/webapp/index.html
+++ b/M133-Projektarbeit-Zoo/src/main/webapp/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <p>Try path "<code>/api/hello-world/</code>" for testing the initial service</p>
 <br>
-<a href="pages/login.html">Login</a>
+<div id="loginDiv"><a href="pages/login.html">Login <i class='fas fa-user-alt'></i></a></div>
 </body>
 </html>
