--- a/M133-Projektarbeit-Zoo/src/main/webapp/pages/login.html
+++ b/M133-Projektarbeit-Zoo/src/main/webapp/pages/login.html
@@ -3,16 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../css/loginStyle.css">
 </head>
 <body>
-    <form>
-        <label for="usernameInput" id="usernameLabel" name="usernameLabel">Username: </label>
-        <input type="text" id="usernameInput" name="usernameInput">
-        <br>
-        <label for="passwordInput" id="passwordLabel" name="passwordLabel">Password: </label>
-        <input type="password" id="passwordInput" name="passwordInput">
-        <br>
-        <input type="submit" id="loginSubmit" name="loginSubmit" text="Submit">
-    </form>
+    <div class="login-box">
+        <h2>Login</h2>
+        <form action="javascript:userLogin()">
+            <div class="user-box">
+                <input type="text" id="usernameInput" name="usernameInput">
+                <label for="usernameInput" id="usernameLabel" name="usernameLabel">Username: </label>
+            </div>
+            <div class="user-box">
+                <input type="password" id="passwordInput" name="passwordInput">
+                <label for="passwordInput" id="passwordLabel" name="passwordLabel">Password: </label>
+            </div>
+            <input type="submit" id="loginSubmit" name="loginSubmit" text="Login">
+        </form>
+    </div>
+
+
+    <script src="../js/login.js"></script>
 </body>
 </html>
